feat(territotires): Improve find all query with query params to fetch specific info from the data base
